# feast

./: .gitbook.yaml  .gitignore  Makefile  README.md  pyproject.toml  setup.py  test_grpc_import.py  tmp.md
.github/workflows/: verify_packages.yml
docs/: SUMMARY.md  roadmap.md
docs/getting-started/concepts/: feature-view.md
docs/reference/: feature-store-yaml.md  mlflow-integration.md
docs/reference/offline-stores/: sqlite.md
docs/user-guides/: README.md  data-engineer-guide.md  data-scientist-guide.md  mlops-guide.md  software-engineer-guide.md
examples/data-quality-monitoring/: DQM-On-Demand.ipynb  DQM-Quickstart.ipynb  dqm-demo.ipynb  dqm-minimal-failure.ipynb  online-demo.ipynb
examples/mlflow_integration/rag_evaluation/: README.md  rag_prompt_evaluation.py
examples/online/feature_repo/: feature_store.yaml  features.py  get_features_demo.py
examples/quickstart/: quickstart.ipynb
feast/core/: Aggregation_pb2.py  DataFormat_pb2.py  DataSource_pb2.py  DatastoreTable_pb2.py  DynamoDBTable_pb2.py  Entity_pb2.py  FeatureService_pb2.py  FeatureTable_pb2.py  FeatureViewProjection_pb2.py  FeatureView_pb2.py  Feature_pb2.py  InfraObject_pb2.py  OnDemandFeatureView_pb2.py  Registry_pb2.py  SavedDataset_pb2.py  SqliteTable_pb2.py  Store_pb2.py  StreamFeatureView_pb2.py  Transformation_pb2.py  ValidationProfile_pb2.py
feast/types/: EntityKey_pb2.py  Field_pb2.py  Value_pb2.py
infra/scripts/: verify_package_files.py
infra/templates/: README.md.jinja2
protos/feast/core/: DataSource.proto  FeatureView.proto
protos/feast/types/: Value.proto
sdk/python/feast/: cli.py  constants.py  data_source.py  feature_server.py  feature_service.py  feature_store.py  feature_view.py  repo_config.py  type_map.py  types.py  usage.py
sdk/python/requirements/: py3.10-ci-requirements.txt  py3.11-ci-requirements.txt  (+1 more)
ui/: .gitignore  .npmrc  package-lock.json  package.json  rollup.config.js
ui/feature_repo/: features.py
ui/src/: App.css  FeastUISansProviders.tsx  index.css  index.tsx
(+165 files in other folders)
