[build-system]
requires = [
    "pybindgen==0.22.0",
    "setuptools>=60",
    "setuptools_scm>=6.2",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "feast"
description = "Python SDK for Feast"
authors = [
    {name = "Feast"}
]
requires-python = ">=3.9.0"
readme = "README.md"
license = {text = "Apache"}
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
]
dynamic = ["version"]

dependencies = [
    "click>=7.0.0,<9.0.0",
    "colorama>=0.3.9,<1",
    "dill~=0.3.0",
    "protobuf>=4.24.0",
    "Jinja2>=2,<4",
    "jsonschema",
    "mmh3",
    "numpy>=1.22,<2",
    "pandas>=1.4.3,<3",
    "pyarrow<18.1.0",
    "pydantic>=2.0.0",
    "pygments>=2.12.0,<3",
    "PyYAML>=5.4.0,<7",
    "requests",
    "SQLAlchemy[mypy]>1",
    "tabulate>=0.8.0,<1",
    "tenacity>=7,<9",
    "toml>=0.10.0,<1",
    "tqdm>=4,<5",
    "typeguard>=4.0.0",
    "fastapi>=0.68.0",
    "uvicorn[standard]>=0.14.0,<1",
    "uvicorn-worker",
    "gunicorn; platform_system != 'Windows'",
    "dask[dataframe]>=2024.2.1",
    "prometheus_client",
    "psutil",
    "bigtree>=0.19.2",
    "pyjwt",
]

[project.scripts]
feast = "feast.cli:cli"

[tool.setuptools]
package-dir = {"" = "sdk/python"}
packages = ["feast"]

[tool.setuptools_scm]
root = "."
version_scheme = "guess-next-dev"
local_scheme = "node-and-date"
tag_regex = "^(?:[/\\w-]+)?(?P<version>[vV]?\\d+(?:\\.\\d+){0,2}[^\\+]*)(?:\\+.*)?$"

[tool.ruff]
line-length = 88
target-version = "py39"
include = ["*.py", "*.pyi"]

[tool.ruff.format]
# exclude a few common directories in the root of the project
exclude = [ 
  ".eggs", 
  ".git", 
  ".hg", 
  ".mypy_cache",
  ".tox", 
  ".venv", 
  "_build", 
  "buck-out",
  "build",
  "dist",
  "pb2.py",
  ".pyi",
  "protos",
  "sdk/python/feast/embedded_go/lib"]
